Allow for the creation of multiple TcpSimulators.
- The TCG reference simulator writes the ports it uses to `command.port` and
  `platform.port` in the directory of the spawned simulator process. Rather than
  assume default ports, the TcpConnection associated with the simulator now
  parses those files for the ports to use.
- Combine that with the use of a temporary directory for each integration test
  and now the integration tests all run in parallel (we can drop the
  `--test-threads=1` parameter from the tests).

Before: test result: ok. 5 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 5.03s
After: test result: ok. 5 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 1.01s

Future improvements:

- Don't persist the temporary directory via the `keep()` function. This isn't a
  big deal since we're running in an ephemeral container anyways, but it's
  possible to refactor the test code to properly maintain the scope of the
  temporary directory.
- Suppress the garbled simulator output. The next revision of the code will add
  the `--quiet` flag to the simulator to clean up the test output.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ proc-macro2 = "1"
 quote = "1"
 safe-discriminant = "0.2.0"
 syn = { version = "2", features = ["full"] }
+tempfile = "3.25.0"
 trybuild = { version = "1.0.89", features = ["diff"] }
 zerocopy = { version = "0.8.33", features = ["derive"] }
 
