--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -16,9 +16,10 @@ zerocopy = { workspace = true, optional = true }
 
 [dev-dependencies]
 tpm2-rs-unionify = { workspace = true }
+tempfile = { workspace = true }
 
 [[test]]
 name = "simulator"
 path = "tests/simulator.rs"
-test = false # Do not test by default
+test = false                           # Do not test by default
 required-features = ["connection-tcp"]
