--- a/client/compose.yaml
+++ b/client/compose.yaml
@@ -2,6 +2,6 @@ services:
   simulator_tests:
     build: .
     volumes:
-       - ../:/tpm-rs
+      - ../:/tpm-rs
     # Simulator tests must be single-threaded because they use a single TCP port.
-    command: bash -c 'cargo test -p tpm2-rs-client --test simulator -- --nocapture --test-threads=1'
+    command: bash -c 'cargo test -p tpm2-rs-client --test simulator -- --nocapture'
