Capture stdout/stderr from the simulator.
Also provide a function that allows retrieving it.

--- a/client/compose.yaml
+++ b/client/compose.yaml
@@ -3,5 +3,4 @@ services:
     build: .
     volumes:
       - ../:/tpm-rs
-    # Simulator tests must be single-threaded because they use a single TCP port.
-    command: bash -c 'cargo test -p tpm2-rs-client --test simulator -- --nocapture'
+    command: bash -c 'cargo test -p tpm2-rs-client --test simulator'
